# Projects

./: .gitmodules  AdditionOperation3.java  Assignment2.java  Assignment3 (1).java  Assignment3completed.java  Assignment8.java  Cis260.java  DivisionOperation.java  GreaterEqualOperation.java  JavaApplication1.java  JavaApplication9.java  LessEqualOperation.java  MultiplicationOperation.java  Program3  README.md  TypeA.java  divide.c  inventory.h  inventory.txt  main.c  multiply.h  subtract.c
C lang CIS340/: add.c  add.h  divide.h  execute.c  execute.h  multiply.c  source.c  subtract.h
CompSci Projects/: Program1 Java  Program2 Java  Program3 Java  Program6 Java  README.md
CompSci Projects/C lang CIS340/: CMakeLists.txt  add.c  add.h  divide.c  divide.h  execute.c  execute.h  inventory.h  inventory.txt  multiply.c  multiply.h  source.c  subtract.c  subtract.h
IT Projects/: README.md
Memory Verses/: Memory Verse Micah 6 6-8.html
Memory Verses WEB Tools/: Memory Verse Genesis 22 7-8.html  Memory Verse Isaiah 53 1-6.html  Memory Verse Isaiah 56 6-7.html  Memory Verse Revelations 22 1-4.html  Memory Verse Romans 2 13-15.html
Program4/: Assignment4.java
Program4 Java/: TypeB.java
Program5/: AdditionOperation.java  Cis260.java  GreaterOperation.java  LessEqualOperation.java
Program5 Java/: AdditionOperation3.java  DivisionOperation.java  GreaterEqualOperation.java  LessOperation.java  MathOperation.java  SubtractionOperation.java
Program7-FXML/: Assignment7.java
She Codes Plus WEB Tools/: Homework 1-1.html  Homework 3-1.html
cis260/: GreaterOperation.java  (+5 more)
(+67 files in other folders)
